# piko

./: CMakeLists.txt  build.sh
include/: keyhandler.hpp  texteditor.hpp
res/: example_text.txt
src/: keyhandler.cpp  main.cpp  texteditor.cpp
test/: CMakeLists.txt  tests.cpp
